# clickin-creative-dashboard

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.template  CONTRIBUTING.md  README.md  main-prd.md
.github/workflows/: ci.yml
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt
src/core/app/: Application.cpp  Application.h  CoreContext.cpp  CoreContext.h  PluginManager.cpp  PluginManager.h
src/core/capability/: CapabilityBroker.cpp  CapabilityBroker.h  CapabilityFuture.cpp  CapabilityFuture.h  CapabilityFutureQt.h  CapabilityRegistry.cpp  CapabilityRegistry.h  CapabilityTypes.h
src/core/db/: CoreSchema.cpp  CoreSchema.h  Database.cpp  Database.h  Migration.cpp  Migration.h
src/core/services/: AssetService.cpp  AssetService.h  CacheService.cpp  CacheService.h  DatabaseService.cpp  DatabaseService.h  HierarchyService.cpp  HierarchyService.h  JobService.cpp  JobService.h  MetadataService.cpp  MetadataService.h  SettingsService.cpp  SettingsService.h
src/core/types/: AssetId.cpp  RawPayload.h
src/core/worker/: WorkerPool.cpp  WorkerPool.h
src/providers/: CMakeLists.txt
src/providers/audio/: CMakeLists.txt
src/providers/audio/contracts/: AudioMetadataContract.h  AudioPreviewContract.h
src/providers/builtin_search/: BuiltinSearchPlugin.cpp  BuiltinSearchPlugin.h  CMakeLists.txt
src/providers/core_asset/: CMakeLists.txt  CoreAssetPlugin.cpp  CoreAssetPlugin.h
src/providers/local_audio/: AudioPreviewWidget.cpp  AudioPreviewWidget.h  CMakeLists.txt  LocalAudioPlugin.cpp  LocalAudioPlugin.h
src/providers/local_file/: CMakeLists.txt  LocalFilePlugin.cpp  LocalFilePlugin.h
src/sdk/: AssetRecord.h  CMakeLists.txt  CapabilityCodec.h  IPlugin.h  IRawCapabilityHandler.h  TypedCapabilityHandler.h
src/sdk/contracts/builtin/: AssetDiscoveryContract.h  AssetHierarchyChildrenContract.h  AssetHierarchyRootsContract.h  AssetHierarchyVersionContract.h  AssetKindContract.h  AssetLocatorContract.h  AssetNameContract.h  AssetOpenActionsContract.h  AssetRef.h  AssetSearchContract.h  AssetThumbnailContract.h  DiscoverTabContract.h  HierarchyNode.h  MenuBarItemsContract.h
src/sdk/contracts/media/: AudioWaveformContract.h
src/sdk/contracts/ui/: AssetPreviewWidgetContract.h
src/ui/: CMakeLists.txt
src/ui/asset_list/: AssetListView.cpp  AssetListView.h  CMakeLists.txt
src/ui/audio_preview/: AudioPreviewPanel.cpp  AudioPreviewPanel.h  CMakeLists.txt
src/ui/discover/: CMakeLists.txt  DiscoverManagerDialog.cpp  DiscoverManagerDialog.h
src/ui/inspector/: CMakeLists.txt  InspectorPanel.cpp  InspectorPanel.h
src/ui/job_status/: CMakeLists.txt  JobStatusBar.cpp  JobStatusBar.h
src/ui/plugin_mgmt/: CMakeLists.txt  PluginManagementView.cpp  PluginManagementView.h
src/ui/preview_host/: CMakeLists.txt  PreviewHost.cpp  PreviewHost.h
src/ui/shell/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt
tests/core/app/: test_plugin_lifecycle.cpp
tests/core/capability/: test_capability_broker.cpp  test_capability_future.cpp
tests/core/db/: test_database_layer.cpp
tests/providers/: CMakeLists.txt  test_core_asset_plugin.cpp  test_local_audio_plugin.cpp  test_local_file_plugin.cpp  test_plugin_manifests.cpp
